<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.FinishRouteActivity">

    <TextView
        android:id="@+id/tvFinishRouteTitle"
        style="@style/Theme.AseoAforos.tvTitleStyle"
        android:text="@string/finishRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vFinishRouteHr"
        style="@style/Theme.AseoAforos.vHrStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFinishRouteTitle" />

    <TextView
        android:id="@+id/tvFinishRouteKm"
        style="@style/Theme.AseoAforos.tvLabelStyle.size18"
        android:layout_marginStart="30dp"
        android:text="@string/finishRouteKm"
        app:layout_constraintBottom_toTopOf="@id/etFinishRouteKm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vFinishRouteHr" />

    <EditText
        android:id="@+id/etFinishRouteKm"
        style="@style/Theme.AseoAforos.etProvision"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:autofillHints="1"
        android:hint="@string/hintKmStart"
        android:textColorHint="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@id/tvFinishRouteFinishObservation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFinishRouteKm" />

    <TextView
        android:id="@+id/tvFinishRouteFinishObservation"
        style="@style/Theme.AseoAforos.tvLabelStyle.size18"
        android:layout_marginStart="30dp"
        android:text="@string/finishObservation"
        app:layout_constraintBottom_toTopOf="@id/etFinishRouteFinishObservation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFinishRouteKm" />

    <EditText
        android:id="@+id/etFinishRouteFinishObservation"
        style="@style/Theme.AseoAforos.textArea"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:autofillHints="ok"
        android:hint="@string/hintAddObservation"
        app:layout_constraintBottom_toTopOf="@id/btnFinishRouteSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFinishRouteFinishObservation" />

    <Button
        android:id="@+id/btnFinishRouteSign"
        style="@style/Theme.AseoAforos.btn"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:text="@string/sign"
        app:layout_constraintBottom_toTopOf="@id/btnFinishRouteFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFinishRouteFinish"
        style="@style/Theme.AseoAforos.btn"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>