<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvDialogPauseRouteTitle"
        style="@style/Theme.AseoAforos.tvTitleStyle"
        android:text="@string/titlePauseRoute"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDialogPauseRouteRefuel"
        style="@style/Theme.AseoAforos.btn.pauseAforo"
        android:text="@string/refueling"
        app:layout_constraintBottom_toTopOf="@id/btnDialogPauseRouteIncidence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogPauseRouteTitle" />

    <Button
        android:id="@+id/btnDialogPauseRouteIncidence"
        style="@style/Theme.AseoAforos.btn.pauseAforo"
        android:text="@string/incidence"
        app:layout_constraintBottom_toTopOf="@id/btnDialogPauseRouteProvision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDialogPauseRouteRefuel" />

    <Button
        android:id="@+id/btnDialogPauseRouteProvision"
        style="@style/Theme.AseoAforos.btn.pauseAforo"
        android:text="@string/dispose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDialogPauseRouteIncidence" />

</androidx.constraintlayout.widget.ConstraintLayout>