<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvDialogNewCollectTitle"
        style="@style/Theme.AseoAforos.tvTitleStyle"
        android:text="@string/selectTypeCollect"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDialogNewCollectVolume"
        style="@style/Theme.AseoAforos.btn.newAforo"
        android:layout_marginTop="60dp"
        android:text="@string/volumeCollect"
        app:layout_constraintBottom_toTopOf="@id/btnDialogNewCollectWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogNewCollectTitle" />

    <Button
        android:id="@+id/btnDialogNewCollectWeight"
        style="@style/Theme.AseoAforos.btn.newAforo"
        android:text="@string/weightCollect"
        app:layout_constraintBottom_toTopOf="@id/btnDialogNewCollectEspecial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDialogNewCollectVolume" />

    <Button
        android:id="@+id/btnDialogNewCollectEspecial"
        style="@style/Theme.AseoAforos.btn.newAforo"
        android:text="@string/especialCollect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDialogNewCollectWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>