<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignActivity">

    <TextView
        android:id="@+id/tvSignTitle"
        style="@style/Theme.AseoAforos.tvTitleStyle"
        android:text="@string/signTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vSignHr"
        style="@style/Theme.AseoAforos.vHrStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_border"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@id/btnSignChange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vSignHr">

        <TextView
            android:id="@+id/tvSignCanvasTitle"
            style="@style/Theme.AseoAforos.tvLabelStyle.size18"
            android:text="@string/Username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etSignName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:hint="@string/hintUsername"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignCanvasTitle" />

        <ImageView
            android:id="@+id/signImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/clientSign"
            android:src="@drawable/vector_picture"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tvSignCanvasName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSignName" />

        <com.example.aseoaforos.ui.view.SignatureView
            android:id="@+id/signatureView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toTopOf="@id/tvSignCanvasName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSignName" />

        <TextView
            android:id="@+id/tvSignCanvasName"
            style="@style/Theme.AseoAforos.tvLabelStyle.size18"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@id/vSignCanvasHr"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="PEPITO PEREZ" />

        <View
            android:id="@+id/vSignCanvasHr"
            style="@style/Theme.AseoAforos.vHrStyle"
            app:layout_constraintBottom_toTopOf="@id/tvSignCaption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSignCaption"
            style="@style/Theme.AseoAforos.tvLabelStyle.size18"
            android:text="@string/captionSign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSignChange"
        style="@style/Theme.AseoAforos.btn.sign"
        android:text="@string/changeSign"
        app:layout_constraintBottom_toTopOf="@id/btnSignAccept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignAccept"
        style="@style/Theme.AseoAforos.btn.sign"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSignCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSignCancel"
        style="@style/Theme.AseoAforos.btn.sign"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSignAccept" />

</androidx.constraintlayout.widget.ConstraintLayout>