<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/tvDialogProvisionTitle"
        style="@style/Theme.AseoAforos.tvTitleStyle"
        android:text="@string/questionProvision"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDialogProvisionYes"
        style="@style/Theme.AseoAforos.btn.pauseAforo"
        android:text="@string/yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDialogProvisionNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDialogProvisionTitle" />

    <Button
        android:id="@+id/btnDialogProvisionNo"
        style="@style/Theme.AseoAforos.btn.pauseAforo"
        android:text="@string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDialogProvisionYes"
        app:layout_constraintTop_toBottomOf="@id/tvDialogProvisionTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>