<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PhotoActivity">

    <TextView
        android:id="@+id/tvPhotoTitle"
        style="@style/Theme.AseoAforos.tvTitleStyle"
        android:text="@string/evidencePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vPhotoHr"
        style="@style/Theme.AseoAforos.vHrStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhotoTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:background="@drawable/shape_border"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/imgBtnPhotoPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vPhotoHr" />

    <ImageButton
        android:id="@+id/imgBtnPhotoPhoto"
        style="@style/Theme.AseoAforos.btn.photo"
        android:layout_width="200dp"
        android:contentDescription="@string/photoDescription"
        app:layout_constraintBottom_toTopOf="@id/bntPhotoAccept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bntPhotoAccept"
        style="@style/Theme.AseoAforos.btn.activityPhoto"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bntPhotoCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bntPhotoCancel"
        style="@style/Theme.AseoAforos.btn.activityPhoto"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bntPhotoAccept" />

</androidx.constraintlayout.widget.ConstraintLayout>